# clang-sfi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  _config.json  build.sh  build_win.sh  compile.sh  compileAndInject.sh  config.json  getFileList.sh  inject.sh  setup-clang.sh  setup-clang_win.sh  start.sh  third party.txt
integrationtests/: CMakeLists.txt  init.sh
integrationtests/MFC_1/: CMakeLists.txt  reference.txt  run.sh  source.cpp
integrationtests/MFC_2/: CMakeLists.txt  reference.txt  run.sh  source.cpp
integrationtests/MFC_3/: CMakeLists.txt  run.sh  source.cpp
integrationtests/MFC_PP/: CMakeLists.txt  config.json  run.sh  source.cpp
integrationtests/MFC_PROJECT/: CMakeLists.txt  config.json  library.cpp  library.h  reference.txt  run.sh  source.cpp
integrationtests/MFC_header/: CMakeLists.txt  reference.txt  run.sh  source.cpp  source.h
integrationtests/MIA_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/MIA_2/: CMakeLists.txt  run.sh  source.cpp
integrationtests/MIA_3/: CMakeLists.txt  run.sh  source.cpp
integrationtests/MIEB_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/MIES_1/: CMakeLists.txt  config.json  reference.txt  run.sh
integrationtests/MIFS_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/MLAC_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/MLOC_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/MVIV_1/: CMakeLists.txt  reference.txt  run.sh  source.cpp
integrationtests/MVIV_2/: CMakeLists.txt  config.json  run.sh  source.cpp
integrationtests/WAEP_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
integrationtests/WVAV_1/: CMakeLists.txt  config.json  reference.txt  run.sh  source.cpp
src/: .clang-format  ASTConsumer.h  FaultConstraints.cpp  FaultConstraints.h  FaultInjector.cpp  FaultInjector.h  GenericRewriter.cpp  GenericRewriter.h  MatchHandler.cpp  MatchHandler.h  SFIASTConsumer.cpp  SFIASTConsumer.h  SFIAction.cpp  SFIAction.h  StmtHandler.cpp  StmtHandler.h  main.cpp  test.cpp  testitest.cpp  utils.cpp  utils.h
src/FaultInjectors/: MFCInjector.cpp  MIAInjector.cpp  MIEBInjector.cpp  MIESInjector.cpp  MIFSInjector.cpp  MLACInjector.cpp  MLOCInjector.cpp  MLPAInjector.cpp  MRSInjector.cpp  MVAEInjector.cpp  MVAEInjector_near_safe.cpp  MVAVInjector.cpp  MVAVInjector_near_safe.cpp  MVIVInjector.cpp  MVIVInjector_near_safe.cpp  WAEPInjector.cpp  WPFVInjector.cpp  WVAVInjector.cpp  WVAVInjector_near_safe.cpp  _all.h
src/libs/: execWithTimeout.cpp
